[gd_scene load_steps=12 format=3 uid="uid://bng2npotg8m3i"]

[ext_resource type="PackedScene" uid="uid://c3fjcfs40yx3u" path="res://Levels/room.tscn" id="1_rex1t"]
[ext_resource type="Script" uid="uid://bbtm63rc70r3i" path="res://Levels/shop_room.gd" id="2_bkljo"]
[ext_resource type="Texture2D" uid="uid://thnj12t7c3yd" path="res://Assets/icon.svg" id="3_4ryim"]
[ext_resource type="PackedScene" uid="uid://c64bwlyjadvwx" path="res://Drops/drop.tscn" id="3_ym2sa"]
[ext_resource type="PackedScene" uid="uid://bgb536ilpkcd4" path="res://Levels/item_pedestal.tscn" id="4_5pmfr"]
[ext_resource type="PackedScene" uid="uid://u16bqjtub8x" path="res://Drops/heart_drop.tscn" id="5_ym2sa"]
[ext_resource type="PackedScene" uid="uid://cqmtr2xjgp8eu" path="res://Drops/shield_drop.tscn" id="6_qt6ip"]
[ext_resource type="PackedScene" uid="uid://dfbubca2bprgq" path="res://Cards/hand.tscn" id="8_qt6ip"]

[sub_resource type="LabelSettings" id="LabelSettings_4ryim"]
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xtyhm"]
size = Vector2(94.9677, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ym2sa"]
size = Vector2(128, 127)

[node name="ShopRoom" instance=ExtResource("1_rex1t")]
script = ExtResource("2_bkljo")
relic_scenes = Array[PackedScene]([ExtResource("3_ym2sa")])
removal_cost = 5

[node name="ShopExit" type="Node2D" parent="." index="11"]

[node name="ExitLabel" type="Label" parent="ShopExit" index="0"]
visible = false
offset_left = 817.0
offset_top = 371.0
offset_right = 1083.0
offset_bottom = 413.0
text = "Select to exit Shop"
label_settings = SubResource("LabelSettings_4ryim")

[node name="Sprite2D" type="Sprite2D" parent="ShopExit" index="1"]
position = Vector2(962, 194)
scale = Vector2(3.39063, 1)
texture = ExtResource("3_4ryim")

[node name="ExitPlayerDetector" type="Area2D" parent="ShopExit/Sprite2D" index="0"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopExit/Sprite2D/ExitPlayerDetector" index="0"]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_xtyhm")

[node name="PedestalContainer" type="Node2D" parent="." index="12"]

[node name="HeartPedestal" parent="PedestalContainer" index="0" instance=ExtResource("4_5pmfr")]
position = Vector2(319, 317)
cost = 2
replaceable = true
item_scene = ExtResource("5_ym2sa")

[node name="ShieldPedestal" parent="PedestalContainer" index="1" instance=ExtResource("4_5pmfr")]
position = Vector2(522, 317)
cost = 5
replaceable = true
item_scene = ExtResource("6_qt6ip")

[node name="Relic1Pedistal" parent="PedestalContainer" index="2" instance=ExtResource("4_5pmfr")]
position = Vector2(1403, 317)
cost = 10

[node name="Relic2Pedistal" parent="PedestalContainer" index="3" instance=ExtResource("4_5pmfr")]
position = Vector2(1623, 317)
cost = 10

[node name="CardRemovalZone" type="Node2D" parent="." index="13"]

[node name="RemoveCardLabel" type="Label" parent="CardRemovalZone" index="0"]
visible = false
offset_left = 507.0
offset_top = 939.0
offset_right = 839.0
offset_bottom = 981.0
text = "Select to discard cards."
label_settings = SubResource("LabelSettings_4ryim")
justification_flags = 162

[node name="Sprite2D" type="Sprite2D" parent="CardRemovalZone" index="1"]
position = Vector2(667, 867)
texture = ExtResource("3_4ryim")

[node name="RemovalPlayerDetector" type="Area2D" parent="CardRemovalZone/Sprite2D" index="0"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardRemovalZone/Sprite2D/RemovalPlayerDetector" index="0"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ym2sa")

[node name="Hand" parent="CardRemovalZone" index="2" instance=ExtResource("8_qt6ip")]
position = Vector2(959, 567)
scale = Vector2(2, 2)

[connection signal="body_entered" from="ShopExit/Sprite2D/ExitPlayerDetector" to="." method="_on_exit_player_detector_body_entered"]
[connection signal="body_exited" from="ShopExit/Sprite2D/ExitPlayerDetector" to="." method="_on_exit_player_detector_body_exited"]
[connection signal="body_entered" from="CardRemovalZone/Sprite2D/RemovalPlayerDetector" to="." method="_on_removal_player_detector_body_entered"]
[connection signal="body_exited" from="CardRemovalZone/Sprite2D/RemovalPlayerDetector" to="." method="_on_removal_player_detector_body_exited"]
